trying to resolve overlapping text in individual techniques pages

--- a/attack-theme/static/style/_layouts.scss
+++ b/attack-theme/static/style/_layouts.scss
@@ -1137,7 +1137,7 @@ pre {
     * {
         overflow: visible !important;
  //       break-before: always !important;
- //       page-break-inside: avoid !important;
+        page-break-inside: avoid !important;
         position: static !important;
         height: 90% !important;
     }
